# copter

./: CMakeLists.txt  README.md
include/copter/: brkga.h  random.h
test/: CMakeLists.txt  brkga_test.cc  rand_test.cc
